Improve classes with approval flow

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -27,6 +27,7 @@
         "ok": "Εντάξει",
         "yes": "Ναι",
         "no": "Όχι",
+        "note": "Σημείωση",
         "continue": "Συνέχεια",
         "back": "Πίσω",
         "next": "Επόμενο",
@@ -151,15 +152,19 @@
         "viewTicket": "Προβολή Εισιτηρίου",
         "cancelBooking": "Ακύρωση Κράτησης",
         "status": {
+            "awaitingApproval": "Αναμονή Έγκρισης",
             "confirmed": "Επιβεβαιωμένο",
             "checkedIn": "Παρουσία Καταγεγραμμένη",
             "attended": "Συμμετείχε",
             "waitlisted": "Σε Λίστα Αναμονής",
             "cancelledByYou": "Ακυρώθηκε από εσάς",
             "cancelledByStudio": "Ακυρώθηκε από την επιχείρηση",
+            "rejectedByStudio": "Αίτηση Απορρίφθηκε",
             "noShow": "Δεν Παρουσιάστηκε",
             "pending": "Εκκρεμεί"
-        }
+        },
+        "businessNote": "Σημείωση επιχείρησης",
+        "rejectionReason": "Αιτιολογία"
     },
     "settings": {
         "title": "Ρυθμίσεις",
@@ -419,6 +424,12 @@
         "signIn": "Σύνδεση",
         "booked": "Κρατήθηκε",
         "bookedSuccess": "Το μάθημά σας κρατήθηκε με επιτυχία.",
+        "requestSent": "Αίτημα Εστάλη",
+        "cancelRequest": "Ακύρωση Αιτήματος",
+        "requestRejected": "Αίτημα Απορρίφθηκε",
+        "rejectedByStudio": "✗ Απορρίφθηκε από το στούντιο",
+        "waitingForApproval": "Αναμονή έγκρισης",
+        "requestSentMessage": "Αυτό το μάθημα απαιτεί έγκριση από την επιχείρηση. Θα ειδοποιηθείτε όταν εγκριθεί ή απορριφθεί.",
         "bookingFailed": "Αποτυχία κράτησης",
         "bookingFailedMessage": "Αποτυχία κράτησης μαθήματος. Παρακαλώ δοκιμάστε ξανά.",
         "cancelBookingTitle": "Ακύρωση \"{{className}}\";",
@@ -722,7 +733,7 @@
         "no": "Όχι",
         "enterNumber": "Εισάγετε αριθμό",
         "enterText": "Εισάγετε την απάντησή σας",
-        "feeIfProvided": "Επιπλέον χρέωση: {{fee}}",
+        "feeIfProvided": "Επιπλέον χρέωση:",
         "additionalFees": "Επιπλέον χρεώσεις",
         "yourAnswers": "Οι Απαντήσεις σας",
         "completeBooking": "Ολοκληρώστε την Κράτησή σας",
