--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -27,6 +27,7 @@
         "ok": "OK",
         "yes": "Yes",
         "no": "No",
+        "note": "Note",
         "continue": "Continue",
         "back": "Back",
         "next": "Next",
@@ -151,15 +152,19 @@
         "viewTicket": "View Ticket",
         "cancelBooking": "Cancel Booking",
         "status": {
+            "awaitingApproval": "Awaiting Approval",
             "confirmed": "Confirmed",
             "checkedIn": "Checked In",
             "attended": "Attended",
             "waitlisted": "Waitlisted",
             "cancelledByYou": "Cancelled by you",
             "cancelledByStudio": "Cancelled by business",
+            "rejectedByStudio": "Request Declined",
             "noShow": "No Show",
             "pending": "Pending"
-        }
+        },
+        "businessNote": "Business note",
+        "rejectionReason": "Reason"
     },
     "settings": {
         "title": "Settings",
@@ -419,6 +424,12 @@
         "signIn": "Sign In",
         "booked": "Booked",
         "bookedSuccess": "Your class has been booked successfully.",
+        "requestSent": "Request Sent",
+        "cancelRequest": "Cancel Request",
+        "requestRejected": "Request Declined",
+        "rejectedByStudio": "✗ Declined by studio",
+        "waitingForApproval": "Waiting for approval",
+        "requestSentMessage": "This class requires approval by the business. You'll be notified when it's approved or declined.",
         "bookingFailed": "Booking failed",
         "bookingFailedMessage": "Failed to book class. Please try again.",
         "cancelBookingTitle": "Cancel \"{{className}}\"?",
@@ -726,7 +737,7 @@
         "no": "No",
         "enterNumber": "Enter a number",
         "enterText": "Enter your answer",
-        "feeIfProvided": "Additional fee: {{fee}}",
+        "feeIfProvided": "Additional fee:",
         "additionalFees": "Additional fees",
         "yourAnswers": "Your Answers",
         "completeBooking": "Complete Your Booking",
