--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -732,7 +732,7 @@
         "more": "More options"
     },
     "questionnaire": {
-        "preBookingQuestions": "Pre-booking Questions",
+        "preBookingQuestions": "Questionnaire",
         "yes": "Yes",
         "no": "No",
         "enterNumber": "Enter a number",
