--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -487,7 +487,7 @@
                 "noBookingsDescription": "Οι πελάτες δεν έχουν κάνει κράτηση για αυτό το μάθημα ακόμα"
             },
             "questionnaire": {
-                "title": "Απαντήσεις Προ-κράτησης",
+                "title": "Ερωτηματολόγιο",
                 "answer": "απάντηση",
                 "answers": "απαντήσεις",
                 "totalAdditionalFees": "Συνολικές επιπλέον χρεώσεις"
@@ -573,7 +573,7 @@
         "reloadPage": "Ανανέωση Σελίδας"
     },
     "questionnaire": {
-        "title": "Ερωτήσεις Προ-κράτησης",
+        "title": "Ερωτηματολόγιο",
         "addQuestion": "Προσθήκη Ερώτησης",
         "deleteQuestion": "Διαγραφή Ερώτησης",
         "noQuestionsConfigured": "Δεν έχουν ρυθμιστεί ερωτήσεις",
