Refactor auth flow and translate otp emails

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -81,7 +81,7 @@
             "verificationCodeLabel": "Κωδικός Επαλήθευσης",
             "verificationCodePlaceholder": "Εισάγετε 6ψήφιο κωδικό",
             "checkEmailTitle": "Ελέγξτε το email σας",
-            "checkEmailSubtitle": "Στείλαμε έναν κωδικό επαλήθευσης στο {email}",
+            "checkEmailSubtitle": "Στείλαμε έναν κωδικό επαλήθευσης στο {{email}}",
             "button": "Σύνδεση",
             "backToSignIn": "Πίσω στη Σύνδεση",
             "back": "Πίσω",
@@ -91,7 +91,7 @@
             "errorSendCode": "Δεν ήταν δυνατή η αποστολή του κωδικού επαλήθευσης. Παρακαλώ δοκιμάστε ξανά.",
             "errorInvalidCode": "Μη έγκυρος κωδικός επαλήθευσης. Παρακαλώ δοκιμάστε ξανά.",
             "tooManyAttempts": "Πάρα Πολλές Προσπάθειες Σύνδεσης",
-            "tooManyAttemptsMessage": "Παρακαλώ δοκιμάστε ξανά σε {time}.",
+            "tooManyAttemptsMessage": "Παρακαλώ δοκιμάστε ξανά σε {{time}}.",
             "accountNotFound": "Λογαριασμός Δεν Βρέθηκε",
             "accountNotFoundMessage": "Δεν βρέθηκε λογαριασμός με αυτή τη διεύθυνση email. Παρακαλώ δημιουργήστε πρώτα έναν λογαριασμό. Αν αυτό είναι λάθος, επικοινωνήστε με την υποστήριξη.",
             "createAccountButton": "Δημιουργία Λογαριασμού",
@@ -105,7 +105,7 @@
             "verificationCodeLabel": "Κωδικός Επαλήθευσης",
             "verificationCodePlaceholder": "Εισάγετε 6ψήφιο κωδικό",
             "checkEmailTitle": "Ελέγξτε το email σας",
-            "checkEmailSubtitle": "Στείλαμε έναν κωδικό επαλήθευσης στο {email}",
+            "checkEmailSubtitle": "Στείλαμε έναν κωδικό επαλήθευσης στο {{email}}",
             "button": "Δημιουργία Λογαριασμού",
             "verifyButton": "Επαλήθευση & Δημιουργία Λογαριασμού",
             "back": "Πίσω",
@@ -116,7 +116,7 @@
             "errorSendCode": "Δεν ήταν δυνατή η αποστολή του κωδικού επαλήθευσης. Παρακαλώ δοκιμάστε ξανά.",
             "errorInvalidCode": "Μη έγκυρος κωδικός επαλήθευσης. Παρακαλώ δοκιμάστε ξανά.",
             "tooManyAttempts": "Πάρα Πολλές Προσπάθειες Εγγραφής",
-            "tooManyAttemptsMessage": "Παρακαλώ δοκιμάστε ξανά σε {time}.",
+            "tooManyAttemptsMessage": "Παρακαλώ δοκιμάστε ξανά σε {{time}}.",
             "accountExists": "Ο Λογαριασμός Υπάρχει Ήδη",
             "accountExistsMessage": "Υπάρχει ήδη λογαριασμός με αυτό το email. Παρακαλώ συνδεθείτε αντί για αυτό.",
             "signInButton": "Σύνδεση",
@@ -124,7 +124,7 @@
         },
         "waitlist": {
             "welcomeTitle": "Καλώς ήρθατε στη Λίστα Αναμονής! 🎉",
-            "welcomeMessage": "Ευχαριστούμε που συμμετείχατε! Θα σας ειδοποιήσουμε στο {email} όταν ξεκινήσουμε στο {city}.",
+            "welcomeMessage": "Ευχαριστούμε που συμμετείχατε! Θα σας ειδοποιήσουμε στο {{email}} όταν ξεκινήσουμε στην {{city}}.",
             "ok": "Εντάξει"
         },
         "signOut": "Έξοδος",
