--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -81,7 +81,7 @@
             "verificationCodeLabel": "Verification Code",
             "verificationCodePlaceholder": "Enter 6-digit code",
             "checkEmailTitle": "Check your email",
-            "checkEmailSubtitle": "We sent a verification code to {email}",
+            "checkEmailSubtitle": "We sent a verification code to {{email}}",
             "button": "Sign In",
             "backToSignIn": "Back to Sign In",
             "back": "Back",
@@ -91,7 +91,7 @@
             "errorSendCode": "Could not send verification code. Please try again.",
             "errorInvalidCode": "Invalid verification code. Please try again.",
             "tooManyAttempts": "Too Many Login Attempts",
-            "tooManyAttemptsMessage": "Please try again in {time}.",
+            "tooManyAttemptsMessage": "Please try again in {{time}}.",
             "accountNotFound": "Account Not Found",
             "accountNotFoundMessage": "No account found with this email address. Please create an account first. If this is a mistake, contact support.",
             "createAccountButton": "Create Account",
@@ -105,7 +105,7 @@
             "verificationCodeLabel": "Verification Code",
             "verificationCodePlaceholder": "Enter 6-digit code",
             "checkEmailTitle": "Check your email",
-            "checkEmailSubtitle": "We sent a verification code to {email}",
+            "checkEmailSubtitle": "We sent a verification code to {{email}}",
             "button": "Create Account",
             "verifyButton": "Verify & Create Account",
             "back": "Back",
@@ -116,7 +116,7 @@
             "errorSendCode": "Could not send verification code. Please try again.",
             "errorInvalidCode": "Invalid verification code. Please try again.",
             "tooManyAttempts": "Too Many Registration Attempts",
-            "tooManyAttemptsMessage": "Please try again in {time}.",
+            "tooManyAttemptsMessage": "Please try again in {{time}}.",
             "accountExists": "Account Already Exists",
             "accountExistsMessage": "An account with this email already exists. Please sign in instead.",
             "signInButton": "Sign In",
@@ -124,7 +124,7 @@
         },
         "waitlist": {
             "welcomeTitle": "Welcome to the Waitlist! 🎉",
-            "welcomeMessage": "Thanks for joining! We'll notify you at {email} when we launch in {city}.",
+            "welcomeMessage": "Thanks for joining! We'll notify you at {{email}} when we launch in {{city}}.",
             "ok": "OK"
         },
         "signOut": "Sign Out",
