Prevent drawers from dismiss on clickoutside

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -621,7 +621,8 @@
             "exploreButton": "Αναζήτηση"
         },
         "yourSchedule": "Το Πρόγραμμά σας",
-        "happeningToday": "Συμβαίνουν σήμερα",
+        "happeningToday": "Ξεκινάνε σύντομα",
+        "happeningTomorrow": "Συμβαίνουν αύριο",
         "bestOffers": "Καλύτερες Προσφορές",
         "newStudios": "Νέες εμπειρίες",
         "withInstructor": "με {{instructor}}",
@@ -709,6 +710,49 @@
         "running": "Τρέξιμο",
         "crossfit": "CrossFit",
         "boxing": "Πυγμαχία",
+        "other": "Άλλο"
+    },
+    "venueCategories": {
+        "yoga_studio": "Στούντιο Γιόγκα",
+        "fitness_center": "Γυμναστήριο",
+        "dance_studio": "Σχολή Χορού",
+        "pilates_studio": "Στούντιο Πιλάτες",
+        "swimming_facility": "Κολυμβητήριο",
+        "martial_arts_studio": "Σχολή Πολεμικών Τεχνών",
+        "climbing_gym": "Αναρριχητικό Κέντρο",
+        "crossfit_box": "CrossFit Box",
+        "wellness_center": "Κέντρο Ευεξίας",
+        "outdoor_fitness": "Υπαίθρια Γυμναστική",
+        "personal_training": "Προσωπική Προπόνηση",
+        "rehabilitation_center": "Κέντρο Αποκατάστασης",
+        "creative_studio": "Δημιουργικό Στούντιο",
+        "sport_facility": "Αθλητική Εγκατάσταση"
+    },
+    "classCategories": {
+        "yoga": "Γιόγκα",
+        "pilates": "Πιλάτες",
+        "strength": "Δυναμική Προπόνηση",
+        "cardio": "Καρδιο",
+        "hiit": "HIIT",
+        "dance": "Χορός",
+        "martial_arts": "Πολεμικές Τέχνες",
+        "swimming": "Κολύμβηση",
+        "cycling": "Ποδηλασία",
+        "crossfit": "CrossFit",
+        "barre": "Barre",
+        "meditation": "Διαλογισμός",
+        "breathwork": "Αναπνευστικές Τεχνικές",
+        "climbing": "Αναρρίχηση",
+        "boxing": "Πυγμαχία",
+        "functional_training": "Λειτουργική Προπόνηση",
+        "stretching": "Διατάσεις",
+        "aqua_fitness": "Aqua Fitness",
+        "running": "Τρέξιμο",
+        "personal_training": "Προσωπική Προπόνηση",
+        "workshop": "Εργαστήριο",
+        "art": "Τέχνη & Χειροτεχνία",
+        "cooking": "Μαγειρική",
+        "rehabilitation": "Αποκατάσταση",
         "other": "Άλλο"
     },
     "cities": {
