--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -585,5 +585,48 @@
         "integerOnly": "Integer only",
         "textConfig": "Text Settings",
         "maxLength": "Max length"
+    },
+    "venueCategories": {
+        "yoga_studio": "Yoga Studio",
+        "fitness_center": "Fitness Center",
+        "dance_studio": "Dance Studio",
+        "pilates_studio": "Pilates Studio",
+        "swimming_facility": "Swimming Facility",
+        "martial_arts_studio": "Martial Arts Studio",
+        "climbing_gym": "Climbing Gym",
+        "crossfit_box": "CrossFit Box",
+        "wellness_center": "Wellness Center",
+        "outdoor_fitness": "Outdoor Fitness",
+        "personal_training": "Personal Training",
+        "rehabilitation_center": "Rehabilitation Center",
+        "creative_studio": "Creative Studio",
+        "sport_facility": "Sport Facility"
+    },
+    "classCategories": {
+        "yoga": "Yoga",
+        "pilates": "Pilates",
+        "strength": "Strength Training",
+        "cardio": "Cardio",
+        "hiit": "HIIT",
+        "dance": "Dance",
+        "martial_arts": "Martial Arts",
+        "swimming": "Swimming",
+        "cycling": "Cycling",
+        "crossfit": "CrossFit",
+        "barre": "Barre",
+        "meditation": "Meditation",
+        "breathwork": "Breathwork",
+        "climbing": "Climbing",
+        "boxing": "Boxing",
+        "functional_training": "Functional Training",
+        "stretching": "Stretching",
+        "aqua_fitness": "Aqua Fitness",
+        "running": "Running",
+        "personal_training": "Personal Training",
+        "workshop": "Workshop",
+        "art": "Art & Crafts",
+        "cooking": "Cooking",
+        "rehabilitation": "Rehabilitation",
+        "other": "Other"
     }
 }
