--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -625,7 +625,8 @@
             "exploreButton": "explore here"
         },
         "yourSchedule": "Your Schedule",
-        "happeningToday": "Happening Today",
+        "happeningToday": "Starting soon",
+        "happeningTomorrow": "Happening Tomorrow",
         "bestOffers": "Best Offers",
         "newStudios": "New studios",
         "withInstructor": "with {{instructor}}",
@@ -713,6 +714,49 @@
         "running": "Running",
         "crossfit": "CrossFit",
         "boxing": "Boxing",
+        "other": "Other"
+    },
+    "venueCategories": {
+        "yoga_studio": "Yoga Studio",
+        "fitness_center": "Fitness Center",
+        "dance_studio": "Dance Studio",
+        "pilates_studio": "Pilates Studio",
+        "swimming_facility": "Swimming Facility",
+        "martial_arts_studio": "Martial Arts Studio",
+        "climbing_gym": "Climbing Gym",
+        "crossfit_box": "CrossFit Box",
+        "wellness_center": "Wellness Center",
+        "outdoor_fitness": "Outdoor Fitness",
+        "personal_training": "Personal Training",
+        "rehabilitation_center": "Rehabilitation Center",
+        "creative_studio": "Creative Studio",
+        "sport_facility": "Sport Facility"
+    },
+    "classCategories": {
+        "yoga": "Yoga",
+        "pilates": "Pilates",
+        "strength": "Strength Training",
+        "cardio": "Cardio",
+        "hiit": "HIIT",
+        "dance": "Dance",
+        "martial_arts": "Martial Arts",
+        "swimming": "Swimming",
+        "cycling": "Cycling",
+        "crossfit": "CrossFit",
+        "barre": "Barre",
+        "meditation": "Meditation",
+        "breathwork": "Breathwork",
+        "climbing": "Climbing",
+        "boxing": "Boxing",
+        "functional_training": "Functional Training",
+        "stretching": "Stretching",
+        "aqua_fitness": "Aqua Fitness",
+        "running": "Running",
+        "personal_training": "Personal Training",
+        "workshop": "Workshop",
+        "art": "Art & Crafts",
+        "cooking": "Cooking",
+        "rehabilitation": "Rehabilitation",
         "other": "Other"
     },
     "cities": {
