--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -610,5 +610,48 @@
         "integerOnly": "Μόνο ακέραιοι",
         "textConfig": "Ρυθμίσεις Κειμένου",
         "maxLength": "Μέγιστο μήκος"
+    },
+    "venueCategories": {
+        "yoga_studio": "Στούντιο Γιόγκα",
+        "fitness_center": "Γυμναστήριο",
+        "dance_studio": "Σχολή Χορού",
+        "pilates_studio": "Στούντιο Πιλάτες",
+        "swimming_facility": "Κολυμβητήριο",
+        "martial_arts_studio": "Σχολή Πολεμικών Τεχνών",
+        "climbing_gym": "Αναρριχητικό Κέντρο",
+        "crossfit_box": "CrossFit Box",
+        "wellness_center": "Κέντρο Ευεξίας",
+        "outdoor_fitness": "Υπαίθρια Γυμναστική",
+        "personal_training": "Προσωπική Προπόνηση",
+        "rehabilitation_center": "Κέντρο Αποκατάστασης",
+        "creative_studio": "Δημιουργικό Στούντιο",
+        "sport_facility": "Αθλητική Εγκατάσταση"
+    },
+    "classCategories": {
+        "yoga": "Γιόγκα",
+        "pilates": "Πιλάτες",
+        "strength": "Δυναμική Προπόνηση",
+        "cardio": "Καρδιο",
+        "hiit": "HIIT",
+        "dance": "Χορός",
+        "martial_arts": "Πολεμικές Τέχνες",
+        "swimming": "Κολύμβηση",
+        "cycling": "Ποδηλασία",
+        "crossfit": "CrossFit",
+        "barre": "Barre",
+        "meditation": "Διαλογισμός",
+        "breathwork": "Αναπνευστικές Τεχνικές",
+        "climbing": "Αναρρίχηση",
+        "boxing": "Πυγμαχία",
+        "functional_training": "Λειτουργική Προπόνηση",
+        "stretching": "Διατάσεις",
+        "aqua_fitness": "Aqua Fitness",
+        "running": "Τρέξιμο",
+        "personal_training": "Προσωπική Προπόνηση",
+        "workshop": "Εργαστήριο",
+        "art": "Τέχνη & Χειροτεχνία",
+        "cooking": "Μαγειρική",
+        "rehabilitation": "Αποκατάσταση",
+        "other": "Άλλο"
     }
 }
