Redesign venue classes list

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -477,27 +477,30 @@
         "addressNotAvailable": "Διεύθυνση δεν είναι διαθέσιμη",
         "noImagesAvailable": "Δεν υπάρχουν διαθέσιμες εικόνες",
         "justArrived": "ΝΕΟΣ ΧΩΡΟΣ!",
+        "distanceAway": "{{distance}} μακριά",
         "aboutTheStudio": "Σχετικά με την επιχείρηση",
-        "upcomingClasses": "Προσεχή μαθήματα",
-        "seeAll": "Δείτε όλα",
-        "seeMore": "Δείτε περισσότερα",
-        "viewAllClasses": "Προβολή όλων των μαθημάτων",
-        "alreadyBooked": "Ήδη Κρατημένο",
-        "spotsAvailable": "{{count}} διαθέσιμες θέσεις",
-        "spotsAvailable_one": "{{count}} διαθέσιμη θέση",
-        "spotsAvailable_other": "{{count}} διαθέσιμες θέσεις",
+        "classesOffered": "Διαθέσιμα Μαθήματα",
+        "otherLessonsFrom": "Άλλα μαθήματα από",
         "contact": "Επικοινωνία",
         "address": "Διεύθυνση",
         "phone": "Τηλέφωνο",
         "email": "Email",
         "website": "Ιστοσελίδα",
+        "message": "Μήνυμα",
+        "chatWithVenue": "Συνομιλία με τον χώρο",
         "messageVenue": "Μήνυμα στον Χώρο",
         "loadingVenueDetails": "Φόρτωση λεπτομερειών χώρου...",
         "viewSchedule": "Προβολή Προγράμματος",
         "getDirections": "Λήψη Οδηγιών",
         "amenityShowers": "Ντουζ",
         "amenityAccessible": "Προσβάσιμο",
-        "amenityMats": "Στρώματα"
+        "amenityMats": "Στρώματα",
+        "noAmenitiesFound": "Δεν βρέθηκαν παροχές",
+        "noUpcomingClassesFound": "Δεν βρέθηκαν προσεχή μαθήματα",
+        "schedule": "Πρόγραμμα",
+        "loadingSchedule": "Φόρτωση προγράμματος...",
+        "noClassesOnDate": "Δεν υπάρχουν μαθήματα για αυτή την ημέρα",
+        "seeStudio": "Δείτε το Studio"
     },
     "explore": {
         "title": "Εξερεύνηση",
@@ -576,7 +579,9 @@
         "helpful": "Χρήσιμο",
         "notHelpful": "Όχι χρήσιμο",
         "readMore": "Διαβάστε περισσότερα",
-        "readLess": "Διαβάστε λιγότερα"
+        "readLess": "Διαβάστε λιγότερα",
+        "mustAttendFirst": "Πρέπει να παρακολουθήσετε τουλάχιστον ένα μάθημα σε αυτό το studio πριν γράψετε μια κριτική",
+        "canReviewAfter": "Μπορείτε να αξιολογήσετε ξανά αυτόν τον χώρο μετά τις {{date}}"
     },
     "map": {
         "title": "Χάρτης",
