Update emails and translations

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -657,11 +657,21 @@
     },
     "onboarding": {
         "welcome": "Καλώς ήρθατε στο KymaClub!",
+        "welcomeTitle": "Καλώς ήρθατε στο KymaClub! 👋",
+        "welcomeDescription": "Είστε ένα βήμα μακριά από την εξερεύνηση εκατοντάδων διαφορετικών μαθημάτων.",
         "letsSetup": "Ας ρυθμίσουμε το προφίλ σας",
+        "howShouldWeCallYou": "Πώς θα θέλατε να σας αποκαλούμε;",
         "yourName": "Το Όνομά σας",
         "namePlaceholder": "Εισάγετε το όνομά σας",
+        "selectCity": "Σε ποια πόλη θέλετε να εξερευνήσετε μαθήματα;",
+        "selectCityError": "Παρακαλώ επιλέξτε μια πόλη",
+        "completionError": "Αποτυχία ολοκλήρωσης εγγραφής. Παρακαλώ δοκιμάστε ξανά.",
+        "completing": "Ολοκλήρωση...",
         "skip": "Παράλειψη",
         "finish": "Ολοκλήρωση",
+        "next": "Επόμενο",
+        "back": "Πίσω",
+        "backToSignIn": "Επιστροφή στη σύνδεση",
         "getStarted": "Ξεκινήστε"
     },
     "ticket": {
